Updating all references for /itinerary URL

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-    <script type="text/javascript" src="/ui/js/script.js"></script>
+    <script type="text/javascript" src="/itinerary/ui/js/script.js"></script>
