--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,32 +3,32 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link type="text/css" media="screen" rel="stylesheet" href="/ui/css/styles.css" />
+    <link type="text/css" media="screen" rel="stylesheet" href="/itinerary/ui/css/styles.css" />
     <script type="text/javascript" src="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js"></script>
     <link type="text/css" rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css" media="all" />
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400Italic|IM+Fell+DW+Pica+SC' rel='stylesheet' type='text/css'><!-- There's an italic font as well -->
 
-    <link type="text/css" media="screen" rel="stylesheet" href="/ui/css/responsive-tables.css" />
+    <link type="text/css" media="screen" rel="stylesheet" href="/itinerary/ui/css/responsive-tables.css" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="/ui/js/responsive-tables.js"></script>
+    <script type="text/javascript" src="/itinerary/ui/js/responsive-tables.js"></script>
 
     <!-- Favicons -->
     <!--link rel="shortcut icon" sizes="16x16" href="/favicon.ico" /-->
-    <link rel="shortcut icon" sizes="32x32" href="/favicon.png" />
+    <link rel="shortcut icon" sizes="32x32" href="/itinerary/favicon.png" />
     <!-- 57x57 (not precomposed) for non-retina iPhone/iPod iOS 7 and older Android devices -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/ui/img/drc.square.rcon.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/itinerary/ui/img/drc.square.rcon.png" />
     <!-- 72x72 (not precomposed) for non-retina iPad pre iOS 7 -->
-    <link rel="apple-touch-icon" sizes="72x72" href="/ui/img/drc.square.rcon72.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/itinerary/ui/img/drc.square.rcon72.png" />
     <!-- 76x76 (not precomposed) for non-retina iPad iOS 7 -->
-    <link rel="apple-touch-icon" sizes="76x76" href="/ui/img/drc.square.rcon76.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/itinerary/ui/img/drc.square.rcon76.png" />
     <!-- 114x114 (not precomposed) for retina iPhone pre iOS 7 and post-2011 iPod Touch -->
-    <link rel="apple-touch-icon" sizes="114x114" href="/ui/img/drc.square.rcon114.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="/itinerary/ui/img/drc.square.rcon114.png" />
     <!-- 120x120 (not precomposed) for retina iPhone iOS 7 -->
-    <link rel="apple-touch-icon" sizes="120x120" href="/ui/img/drc.square.rcon120.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/itinerary/ui/img/drc.square.rcon120.png" />
     <!-- 144x144 (not precomposed) for retina iPad pre iOS 7 -->
-    <link rel="apple-touch-icon" sizes="144x144" href="/ui/img/drc.square.rcon144.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/itinerary/ui/img/drc.square.rcon144.png" />
     <!-- 152x152 (not precomposed) for retina iPad iOS 7 -->
-    <link rel="apple-touch-icon" sizes="152x152" href="/ui/img/drc.square.rcon152.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/itinerary/ui/img/drc.square.rcon152.png" />
 
     <!-- Windows 8 / RT -->
-    <meta name="msapplication-TileImage" content="/ui/img/drc.square.rcon144.png" />
+    <meta name="msapplication-TileImage" content="/itinerary/ui/img/drc.square.rcon144.png" />
