--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 {% assign data_h1_title = "A &ldquo;Frightful Number!&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s <em>A Journal of the Plague Year</em>" %}
     <div class="logo-header-wrapper"><div class="logo-header">
-        <img src="/ui/img/drc.pl.itinerary.png" width="247" height="43" alt="Digital Research Center at Hofstra" />
+        <img src="/itinerary/ui/img/drc.pl.itinerary.png" width="247" height="43" alt="Digital Research Center at Hofstra" />
     </div></div>
     <div class="wrapper">
         <h1>{{ data_h1_title }}</h1>
