Converted tables to use CSS-based responsive table technique rather than clunky JavaScript. Hid timeline on small screens. Cleaned up location name/label on small screens where it was colliding with prev/next arrows.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,9 +8,9 @@
     <link type="text/css" rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css" media="all" />
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400Italic|IM+Fell+DW+Pica+SC' rel='stylesheet' type='text/css'><!-- There's an italic font as well -->
 
-    <link type="text/css" media="screen" rel="stylesheet" href="/itinerary/ui/css/responsive-tables.css" />
+    <!--link type="text/css" media="screen" rel="stylesheet" href="/itinerary/ui/css/responsive-tables.css" /-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="/itinerary/ui/js/responsive-tables.js"></script>
+    <!--script type="text/javascript" src="/itinerary/ui/js/responsive-tables.js"></script-->
 
     <!-- Favicons -->
     <!--link rel="shortcut icon" sizes="16x16" href="/favicon.ico" /-->
