--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,3 +31,5 @@
 
     <!-- Windows 8 / RT -->
     <meta name="msapplication-TileImage" content="{{ site.baseurl }}/ui/img/drc.square.rcon144.png" />
+
+	{% include search_support_head.html %}
