--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -10,6 +10,9 @@
         <div class="content">
             <h2>{{ page.page_title }}</h2>
 {{content}}
+        <hr>
+        <br>
+        <p>This project done in partnership with <a href="https://performantsoftware.com/">Performant Software Solutions LLC</a></p>
         </div>
     </div>
 {% include footer.html %}
