--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,9 @@
     <div class="wrapper wrapper-content">
         <div class="content">
 {{content}}
+        <hr>
+        <br>
+        <p>This project done in partnership with <a href="https://performantsoftware.com/">Performant Software Solutions LLC</a></p>
         </div>
     </div>
 {% include footer.html %}
