--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
     <div class="logo-header-wrapper"><div class="logo-header">
-        <img src="/itinerary/ui/img/drc.pl.itinerary.png" width="247" height="43" alt="Digital Research Center at Hofstra" />
+        <img src="/ui/img/drc.pl.itinerary.png" width="247" height="43" alt="Digital Research Center at Hofstra" />
     </div></div>
     <div class="wrapper">
         <h1>{{ page.page_title }}</h1>
