--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link type="text/css" media="screen" rel="stylesheet" href="{{ site.baseurl }}/ui/css/styles.css" />
-    <script type="text/javascript" src="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css" media="all" />
+    <script type="text/javascript" src="https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css" media="all" />
     <link href='https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400Italic|IM+Fell+DW+Pica+SC' rel='stylesheet' type='text/css'><!-- There's an italic font as well -->
 
     <!--link type="text/css" media="screen" rel="stylesheet" href="/ui/css/responsive-tables.css" /-->
